gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: one-api
spec:
  selector:
    app: one-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
