gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: one-api
spec:
  ingressClassName: nginx
  rules:
    - host: back.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: one-api
                port:
                  number: 3000
